# tree-sitter-strudel

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-strudel.pc.in
bindings/c/tree_sitter/: tree-sitter-strudel.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_strudel/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterStrudelTests/: TreeSitterStrudelTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basics.txt  comments.txt  example.txt  javascript.txt  mini_notation.txt
