[package]
name = "tree-sitter-strudel"
description = "Strudel grammar for tree-sitter"
version = "0.2.1"
authors = ["ntsk <ntsk@ntsk.jp>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "strudel"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ntsk/tree-sitter-strudel"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.0"
